[tool.poetry]
name = "exos"
version = "0.1.0"
description = ""
authors = ["Bazire Houssin <hartorn.github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
uvloop = "^0.21.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
